2004-11-08  Erik Hjortsberg  <erik@katastrof.nu>

	* Added include file to solve problem with Ogre's memory manager messing with atlas.

2004-11-04  Erik Hjortsberg  <erik@katastrof.nu>

	* Moved foliage to class Foliage. The grass is now randomly rotated and scaled.

2004-11-04  Erik Hjortsberg  <erik@katastrof.nu>

	* Fixes for compilation

2004-11-04  Erik Hjortsberg  <erik@katastrof.nu>

	* Moved from dime to ember. Thus the big checkin.
	* Added wield action to inventory

2004-10-04 Miguel Guzman <aglanor [at] telefonica [dot] net>
	* Fixed many small details that prevented Ember
	to build and run flawlessly.

2004-08-05 Miguel Guzman <aglanor [at] telefonica [dot] net>
	* /src/services/server/OOGChat.(h|cpp):
	Changed OOG send msg command from "say" to "talk", "say" will be
	reserved for In-Game chat.
	* /src/services/server/ServerService.(h|cpp), /src/components/ogre/...:
	Now "say" or no command sends In-Game chat message. 
	Messages from the player are correctly displayed.

2004-08-05 Miguel Guzman <aglanor [at] telefonica [dot] net>
	* /src/components/ogre/GUIManager.(h|cpp) and others related:
	Added basic GUI support, including display of In-Game chat.

2004-07-08 Miguel Guzman <aglanor [at] telefonica [dot] net>

	* DimeEventProcessor, InputManager: added screenshot support.
	Pressing F8 will write screenshot as:
		screenshot_yyyymmdd_hhmmss.png

2004-07-08 Miguel Guzman <aglanor [at] telefonica [dot] net>

	* DimeEntity.cpp, resources.cfg: added checks for i
	pig and squirrel models.
	* Makefile.am: removed (temporarily) an unused file.

2004-07-08 Miguel Guzman <aglanor [at] telefonica [dot] net>

	* ServerService.cpp: made it more robust against Eris errors,
	  catching more exceptions and being more verbose.

2004-02-27  Al Riddoch  <alriddoch@zepler.org>

	* Fix deps so that we no longer get 2 potentially conflicting
	  versions of wfmath.

	* src/services/gui/widget/Widget.cpp,
	  src/services/gui/widget/Widget.h: Remove some incorrect use